@@ -1,3 +1,4 @@
 Added api.requestReload method for scripts
 Fixed id property being accessible on api namespaces
 Fixed poller not showing toasts
+Fixed hotkeys tab overflowing rather than scrolling
